Add batch artefact move workflow
